<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search_apps"
        android:icon="@drawable/ic_search_icon"
        android:title="@string/apps_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_select_all_24dp"
        android:title="@string/apps_select_all"
        app:iconTint="?attr/colorOnPrimary"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_invert_selection"
        android:icon="@drawable/ic_toggle_switch"
        android:title="@string/apps_invert_selection"
        app:iconTint="?attr/colorOnPrimary"
        app:showAsAction="ifRoom" />
</menu>
